--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-
+<h2>Blog</h2>
 <%= @posts.inspect%>
+<h2>Skills</h2>
+<%= @skills.inspect%>
